--- a/style.css
+++ b/style.css
@@ -1,5 +1,27 @@
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+header {
+  text-align: center;
 }
+figure {
+  text-align: center;
+}
+nav > a {
+  padding: 10px;
+  background-color: grey;
+}
+figcaption {
+  font-size: medium;
+  text-align: center;
+}
+section#featured-property > p {
+  margin: 0 auto;
+  line-height: normal;
+  text-align: center;
+  width: 800px;
+}
+section#details > div {
+  float: left;  
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
+
